Version 1.7.0 [WIP]
-------------------------------------------------------------------------

FEATURES
* get_credentials() and strip_credentials() retrieve and remove user authentication info
from URLs, as appropriate (#64)
* A small performance improvement to parameter-related functions.

BUGS
* url_parse now handles URLs with user auth/ident information in them, stripping it out (#64)
* url_parse now handles URLs that are IPv6 addresses (#65)
* url_parse now handles URLs with @ characters in query fragments
* url_compose now handles URLs with query strings but no paths (#71)

Version 1.6.0
-------------------------------------------------------------------------
FEATURES
* Fully punycode encoding and decoding support, thanks to Drew Schmidt.
* param_get, param_set and param_remove are all fully capable of handling NA values.
* component setting functions can now assign even when the previous value was NA.

Version 1.5.2
-------------------------------------------------------------------------

BUGS
* Custom suffix lists were not working properly.

Version 1.5.1
-------------------------------------------------------------------------

BUGS
* Fixed a bug in which punycode TLDs were excluded from TLD extraction (thanks to
  Alex Pinto for pointing that out) #51
* param_get now returns NAs for missing values, rather than empty strings (thanks to Josh Izzard for the report) #49
* suffix_extract now no longer goofs if the domain+suffix combo overlaps with a valid suffix (thanks to Maryam Khezrzadeh and Alex Pinto) #50

DEVELOPMENT
* Removed the non-portable -g compiler flag in response to CRAN feedback.

Version 1.5.0
-------------------------------------------------------------------------
FEATURES

* Using tries as a data structure (see https://github.com/Ironholds/triebeard), we've increased the speed of suffix_extract() (instead of taking twenty seconds to process a million domains, it now takes..one.)