@@ -27,7 +27,6 @@ export(tld_refresh)
 export(url_compose)
 export(url_decode)
 export(url_encode)
-export(url_parameters)
 export(url_parse)
 import(methods)
 importFrom(Rcpp,sourceCpp)
