@@ -11,11 +11,3 @@
 #' @docType package
 #' @aliases urltools urltools-package
 NULL
-
-#'@rdname param_get
-#'@export
-url_parameters <- function(urls, parameter_names){
-  .Deprecated("param_get",
-              old = as.character(sys.call(sys.parent()))[1L])
-  return(param_get(urls, parameter_names))
-}
