@@ -1,14 +1,11 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/RcppExports.R, R/urltools.R
+% Please edit documentation in R/RcppExports.R
 \name{param_get}
 \alias{param_get}
 \alias{url_parameter}
-\alias{url_parameters}
 \title{get the values of a URL's parameters}
 \usage{
 param_get(urls, parameter_names)
-
-url_parameters(urls, parameter_names)
 }
 \arguments{
 \item{urls}{a vector of URLs}
