@@ -5,12 +5,14 @@ FEATURES
 * get_credentials() and strip_credentials() retrieve and remove user authentication info
 from URLs, as appropriate (#64)
 * A small performance improvement to parameter-related functions.
+* The long-deprecated url_parameters has been removed
 
 BUGS
 * url_parse now handles URLs with user auth/ident information in them, stripping it out (#64)
 * url_parse now handles URLs that are IPv6 addresses (#65)
 * url_parse now handles URLs with @ characters in query fragments
 * url_compose now handles URLs with query strings but no paths (#71)
+* param_set() can now handle parameters with overlapping names
 
 Version 1.6.0
 -------------------------------------------------------------------------
